[package]
name = "bip70-server"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "*"
actix-http = "*"
actix-service = "*"
actix-rt = "*"
actix-threadpool = "*"
base64 = "*"
bitcoin = "*"
bitcoin-zmq = "*"
bitcoincash-addr = "*"
bitcoin_hashes = "*"
bytes = "*"
clap = { version = "*", features = ["yaml"] }
chrono = { version = "0.4.7", features = [ "serde" ] }
config = "*"
diesel = { version = "*", features = [ "postgres",  "r2d2", "chrono", "uuid"] }
dirs = "*"
env_logger = "*"
futures = "*"
hex = "*"
lazy_static = "*"
log = "*"
prost = "*"
reqwest = "*"
secp256k1 = "0.12.0"
serde = "*"
uuid = { version = "*", features = ["serde", "v4"] }
serde_json = "*"
serde_derive = "*"
url = "*"

[build-dependencies]
prost-build = "*"
